src/main/java/com/example/admin/demo/common/error/EventNotFoundException.java
package com.example.admin.demo.common.error;

public class EventNotFoundException extends RuntimeException {
  public EventNotFoundException(String message) {
    super(message);
  }
}
